# src/server/route/routes/user.ts
@@ -11,7 +11,7 @@ dotenv.config();
  * POST /api/user/register
  * @summary Create a user
  * @description Register a new user in the application. Emails and Usernames are unique. In addition usernames are not case sensitive
- * @response 200 -OK
+ * @response 200 - OK
  * @response 403 - Forbidden
  * @bodyRequired
  * @bodyContent {Register} - application/json
@@ -44,6 +44,8 @@ router.route('/user/register').post(async (req: Request, res: Response) => {
 /**
  * POST /api/user/login
  * @summary Login to the application
+ * @description Given correct credentials server sends back a json web token which is then used to authenticate the user.
+ * @bodyContent {Login} application/json
  * @bodyRequired
  * @response 200 - OK
  * @response 401 - Unauthorized
